2004-04-16  Colin Walters  <walters@redhat.com>

	* gconf/gconf-internals.c (gconf_activate_server): Move temporary
	directory creation into daemon code, so that we play better with
	SELinux.  Patch reviewed by (and several improvements suggested by)
	Mark McLoughlin <mark@skynet.ie>.

2004-04-13  Mark McLoughlin  <mark@skynet.ie>

	Fix pointed out by Frédéric L. W. Meunier <1@pervalidus.net>.

	* gconf.m4.in: add quotes around AM_GCONF_SOURCE_2 to
	quell autoconf's rudeness.

2004-04-08  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-04-08  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-05  Mark McLoughlin  <mark@skynet.ie>

	Revert the --dump behaviour change (not dumping schema defaults)
	and add a --ignore-schema-defaults argument which applies to
	all arguments which get the value of a key.

	* gconf/gconftool.c:
	(main): check that --ignore-schema-defaults is being used with
	an option which gets a value.
	(list_pairs_in_dir), (dump_entries_in_dir):
	respect --ignore-schema-defaults.
	(get_maybe_without_default): helper function.
	(do_get), (do_get_type), (do_get_list_size), (do_get_list_element):
	respect --ignore-schema-defaults.

2004-04-02  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (set_values), (process_entry): handle
	an <entry> with only a <schema_name> correctly.

2004-04-01  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (dump_entries_in_dir): don't dump
	the value if its the schema default.

2004-04-01  Mark McLoughlin  <mark@skynet.ie>

	* gconf/default.path.in: fix the position of the
	local-defaults.path include. Bug #137578.

2004-03-31  Mark McLoughlin  <mark@skynet.ie>

	Fix last remaining obvious issue I'm seeing with the previous
	patches. gconfd was crashing when removing objects from the
	panel.

	* gconf/gconf-database.c: (gconf_database_recursive_unset):
	Don't try and propogate a NULL error.
	